kubernetes/deployment-fww-wrapper/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fww-wrapper
  labels:
    app: fww-wrapper
  annotations:
    linkerd.io/inject: enabled # Enable Linkerd injection
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
  selector:
    app: fww-wrapper
