kubernetes/deployment-fww-wrapper/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fww-wrapper-ingress
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /fww-wrapper
            pathType: Prefix
            backend:
              service:
                name: fww-wrapper
                port:
                  number: 80
